--- a/package.json
+++ b/package.json
@@ -11,7 +11,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "@astrojs/react": "^4.4.2",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.16.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.24.1",
@@ -20,6 +32,7 @@
     "neostandard": "^0.12.0",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
